<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_menu">

    <item android:id="@+id/share"
        android:icon="@drawable/ic_share_icon"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/theme"
        android:title="@string/theme"
        app:showAsAction="never"/>

    <item android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never"/>

    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never"/>

    <item android:id="@+id/rateus"
        android:title="@string/rateus"
        app:showAsAction="never"/>

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>