<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentInsetLeft="0dp"
    android:contentInsetStart="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    android:contentInsetRight="0dp"
    android:contentInsetEnd="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/rateus_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/rateus_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="?attr/actionBarSize"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/ic_arrow_back"/>

            <TextView
                android:id="@+id/rateus"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/rateus"
                android:textSize="25sp"
                android:textColor="@color/white"/>

        </FrameLayout>

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            android:textSize="25sp"/-->

        <Button
            android:id="@+id/gotogoogleplay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateusongoogle"
            />

        <Button
            android:id="@+id/gotoamazonappstore"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateusonamazon"
            />

        <Button
            android:id="@+id/gototecent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateusontecent"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/goto360"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateuson360"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/gotobaidu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateusonbaidu"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/gotohuawei"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/rateusonhuawei"
            android:visibility="invisible"
            />

    </LinearLayout>



</androidx.appcompat.widget.Toolbar>

