<?xml version="1.0" encoding="utf-8"?>
<!--xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/singlemeal_toolbar">

        <LinearLayout
            android:id="@+id/meal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/meal4_image"
                    android:contentDescription="@string/contentdescription"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:background="@color/colorDashboard"/>

                <TextView
                    android:id="@+id/meal4_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:drawableEnd="@drawable/ic_edit"
                    android:drawablePadding="6dp"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/meal4_title"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="10dp"
                android:autofillHints="@string/meal4title"
                android:hint="@string/meal4title"
                android:background="@android:color/transparent"/>

            <com.manduannabelle.www.fooddiary.LinedEditText
                android:id="@+id/meal4_note"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="600"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/note"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/singlemeal_toolbar"
        layout="@layout/singlemeal_toolbar"/>

</RelativeLayout>