<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SingleMeal1Activity">

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorDashboard"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="30dp"
            app:cardElevation="10dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/card1background"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/breakfast"
                    android:textColor="@color/colorDashboardDeep"
                    android:textSize="22sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorDashboard"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            app:cardElevation="10dp"
            android:layout_height="150dp">

            <LinearLayout
                android:id="@+id/card2background"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lunch"
                    android:textColor="@color/colorDashboardDeep"
                    android:textSize="22sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorDashboard"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            app:cardElevation="10dp"
            android:layout_height="150dp">

            <LinearLayout
                android:id="@+id/card3background"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/dinner"
                    android:textColor="@color/colorDashboardDeep"
                    android:textSize="22sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/gray"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            app:cardElevation="10dp"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add"
                android:layout_gravity="center"/>

            <!--TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/addmore"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" /-->

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>